@@ -1,3 +1,9 @@
+2015-07-24 belangeo <belangeo@gmail.com>
+
+    * Added missing types to OscDataSend and OscDataReceive (char, blob, True, 
+    False, None and MIDI packet).
+    - rev 1332
+
 2015-07-21 belangeo <belangeo@gmail.com>
 
     * Fixed Centroid output with silence as input.
